# go-scaffold

./: .dockerignore  .gitignore  .gitmodules  BUILD.bazel  DOWNLOAD.bzl  Makefile  README.md  WORKSPACE.bazel  app.mk  bash.exe.stackdump  buf.gen.yaml  buf.work.yaml  buf.yaml  docker.bzl  go-scaffold.code-workspace  go.mod  go.sum  go.work  go.work.sum  openapi.yaml  repos.bzl  schema.hcl
.docker/: Dockerfile
.docker/compose/: docker-compose.yml
api/: openapi.yaml
api/admin/v1/: admin.pb.go  admin.pb.validate.go  admin.proto  admin.proto.swagger.json  admin.swagger.json  admin_grpc.pb.go  admin_http.pb.go  error_reason.pb.go  error_reason.pb.validate.go  error_reason.proto  error_reason.swagger.json  error_reason_errors.pb.go
api/common/: common.pb.go  common.pb.validate.go
api/common/conf/: BUILD.bazel  base.pb.go  base.pb.validate.go  bootstrap.pb.go  bootstrap.pb.validate.go  bootstrap.swagger.json  client.pb.go  client.pb.validate.go  client.swagger.json  config.pb.go  config.pb.validate.go  config.swagger.json  data.pb.go  data.pb.validate.go  data.swagger.json  logger.pb.go  logger.pb.validate.go  logger.swagger.json  middleware.pb.go  middleware.pb.validate.go  middleware.swagger.json  notify.pb.go  notify.pb.validate.go  oss.pb.go  oss.pb.validate.go  oss.swagger.json  registry.pb.go  registry.pb.validate.go  registry.swagger.json  server.pb.go  server.pb.validate.go  (+4 more)
api/common/enum/: BUILD.bazel  enum.pb.go  enum.swagger.json
api/common/pagination/: BUILD.bazel  pagination.pb.go  pagination.pb.validate.go  pagination.swagger.json
api/errors/: BUILD.bazel  errors.pb.go
api/gnostic/openapi/discovery/v1/: BUILD.bazel  discovery.pb.go  discovery.pb.validate.go
api/gnostic/openapi/v2/: BUILD.bazel  openapiv2.pb.go
api/gnostic/openapi/v3/: BUILD.bazel  annotations.pb.go  annotations.pb.validate.go  openapiv3.pb.go  openapiv3.pb.validate.go
api/google/protobuf/compiler/: BUILD.bazel  plugin.pb.go
api/protobuf/: enum.pb.go  enum.pb.validate.go  enum.proto  enum.swagger.json  struct.pb.go  struct.pb.validate.go  struct.proto  struct.swagger.json
api/protoc-gen-openapiv2/options/: BUILD.bazel  annotations.pb.go  openapiv2.pb.go
api/server/v1/: BUILD.bazel  api.pb.go  api.pb.validate.go  api.proto  api.swagger.json  api_grpc.pb.go  api_http.pb.go  error_reason.pb.go  error_reason.pb.validate.go  error_reason.proto  error_reason.swagger.json  error_reason_errors.pb.go
api/validate/: BUILD.bazel  validate.pb.go
app/single/: .gitignore  Makefile  buf.gen.yaml  go.mod  go.sum
cmd/go-scaffold/: main.go  wire.go  wire_gen.go
cmd/gui/: main.go
cmd/rename/: BUILD.bazel  rename.go
cmd/server/: BUILD.bazel  main.go  wire.go  wire_gen.go
configs/: config.yaml
configs/authz/: authz_model.conf  authz_policy.csv
go-scaffold-svc/: README.md
go-scaffold-svc/component-def/: DeploymentTemplate.yaml  JobTemplate.yaml
go-scaffold-svc/configs/: team-config.yaml
go-scaffold-svc/trait-def/: annotation.yaml  graceful-shutdown.yaml  label.yaml  liveness-probe.yaml  metrics-expose.yaml  nginx-ingress.yaml  readiness-probe.yaml  resource-limit.yaml  startup-probe.yaml
i18n/: active.en.toml  active.es.toml  active.zh.toml  translate.es.toml  translate.zh.toml
internal/biz/: BUILD.bazel  api.go  auth.go  auth.go.old  auth_old.go  authority.go  biz.go  department.go  dept.go  dict.go  domain.go  greeter.go  menu.go  post.go  resource.go  role.go  user.go
internal/biz/auth/: auth.go  claims.go  options.go
internal/biz/auth/password/: password.go
internal/conf/: BUILD.bazel  conf.pb.go  conf.proto
internal/data/: BUILD.bazel  api.go  auth.go  auth_casbin.go  auth_user.go  auth_validate.go  authority.go  cache.go  data.go  data_context.go  data_enforcer.go  data_models.go  data_scopes.go  data_sys_models.go  department.go  dept.go  dict.go  domain.go  domain_authority_user.go  domain_cache.go  greeter.go  menu.go  menu_cache.go  models.go  post.go  resource.go  role.go  sys_api.go  sys_auth_casbin.go  sys_authority.go  sys_models.go  sys_role.go  sys_user.go  user.go  user_cache.go
internal/pkg/middleware/authn/: BUILD.bazel  client.go  options.go  server.go
internal/pkg/middleware/authz/: BUILD.bazel  authz.go
internal/pkg/middleware/authz/casbin/: BUILD.bazel  server.go  server_test.go
internal/pkg/middleware/localize/: BUILD.bazel  localize.go
internal/pkg/middleware/signout/: BUILD.bazel  signout.go
internal/pkg/proto/: BUILD.bazel  any.go  tree.go  tree_test.go
internal/server/: BUILD.bazel  grpc.go  http.go  server.go  websocket.go
internal/service/: BUILD.bazel  admin.go  service.go  websocket.go
internal/service/api/: BUILD.bazel  api.go  auth.go  dept.go  dict.go  domain.go  menu.go  post.go  resource.go  role.go  user.go
pkg/auth/: auth.go  claims.go  errors.go  options.go
pkg/auth/authn/: BUILD.bazel  authn.go
pkg/auth/authn/jwt/: BUILD.bazel  jwt.go
pkg/auth/authz/: BUILD.bazel  authz.go  claims.go  errors.go
pkg/auth/authz/casbin/: BUILD.bazel  README.md  casbin.go  casbin_test.go  options.go
pkg/auth/authz/noop/: BUILD.bazel  noop.go
pkg/authn/: authn.go  claims.go  errors.go
pkg/authz/: authz.go
pkg/bootstrap/: bootstrap.go  casbin.go  config.go  gorm.go  grpc.go  http.go  jwt.go  logger.go  meilisearch.go  oss.go  redis.go  registry.go  registry_test.go  rest.go  service_info.go  tracer.go
pkg/service/: name.go
pkg/sso/: BUILD.bazel  README.md  sso.go
pkg/util/pagination/gorm/: BUILD.bazel  gorm.go
proto/: buf.gen.yaml  buf.openapi.gen.yaml  buf.typescript.gen.yaml  buf.yaml
proto/common/: common.proto
proto/common/conf/: BUILD.bazel  base.proto  bootstrap.proto  client.proto  config.proto  data.proto  logger.proto  middleware.proto  notify.proto  oss.proto  registry.proto  server.proto  tracer.proto
proto/common/enum/: BUILD.bazel  enum.proto
proto/common/pagination/: BUILD.bazel  pagination.proto
proto/server/v1/: BUILD.bazel  api.proto  buf.openapi.gen.yaml  error_reason.proto
resouces/backup/: go_scaffold.sql  sys_menus.sql
tests/: BUILD.bazel  regexp_test.go  sync_test.go
(+717 files in other folders)
