load("@bazel_gazelle//:def.bzl", "gazelle")
load("//:docker.bzl", "publish_service")

# gazelle:prefix github.com/beiduoke/go-scaffold
gazelle(name = "gazelle")

repository_name = "jayden"

repository_version = "latest"

push_container = False

publish_service("admin", repository_name, repository_version, push_container)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=repos.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable",
    ],
    command = "update-repos",
)