load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "rename_lib",
    srcs = ["rename.go"],
    importpath = "github.com/beiduoke/go-scaffold/cmd/rename",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "rename",
    embed = [":rename_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "rename_test",
    srcs = ["rename_test.go"],
    embed = [":rename_lib"],
)
