load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/beiduoke/go-scaffold/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/biz",
        "//internal/conf",
        "//internal/data",
        "//internal/server",
        "//internal/service/api",
        "@com_github_go_kratos_kratos_v2//:kratos",
        "@com_github_go_kratos_kratos_v2//config",
        "@com_github_go_kratos_kratos_v2//config/file",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//middleware/tracing",
        "@com_github_go_kratos_kratos_v2//transport/grpc",
        "@com_github_go_kratos_kratos_v2//transport/http",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
