load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "conf_proto",
    srcs = ["conf.proto"],
    visibility = ["//:__subpackages__"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

go_proto_library(
    name = "conf_go_proto",
    importpath = "github.com/beiduoke/go-scaffold/internal/conf",
    proto = ":conf_proto",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "conf",
    embed = [":conf_go_proto"],
    importpath = "github.com/beiduoke/go-scaffold/internal/conf",
    visibility = ["//:__subpackages__"],
)
