load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "data",
    srcs = [
        "auth.go",
        "auth_casbin.go",
        "auth_user.go",
        "auth_validate.go",
        "cache.go",
        "data.go",
        "data_bus_models.go",
        "data_context.go",
        "data_enforcer.go",
        "data_scopes.go",
        "data_sys_models.go",
        "dept.go",
        "dict.go",
        "domain.go",
        "domain_cache.go",
        "menu.go",
        "menu_cache.go",
        "post.go",
        "role.go",
        "user.go",
        "user_cache.go",
    ],
    importpath = "github.com/beiduoke/go-scaffold/internal/data",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/biz",
        "//internal/conf",
        "//pkg/auth/authn",
        "//pkg/auth/authn/jwt",
        "//pkg/auth/authz",
        "//pkg/auth/authz/casbin",
        "//pkg/util/convert",
        "//pkg/util/crypto",
        "//pkg/util/ip",
        "//pkg/util/pagination",
        "@com_github_bwmarrin_snowflake//:snowflake",
        "@com_github_casbin_casbin_v2//:casbin",
        "@com_github_casbin_casbin_v2//constant",
        "@com_github_casbin_casbin_v2//model",
        "@com_github_casbin_casbin_v2//persist",
        "@com_github_casbin_gorm_adapter_v3//:gorm-adapter",
        "@com_github_casbin_redis_watcher_v2//:redis-watcher",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//transport",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_google_uuid//:uuid",
        "@com_github_google_wire//:wire",
        "@com_github_meilisearch_meilisearch_go//:meilisearch-go",
        "@com_github_pkg_errors//:errors",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//clause",
        "@io_gorm_gorm//logger",
        "@io_gorm_gorm//schema",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
