load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "grpc.go",
        "http.go",
        "server.go",
    ],
    importpath = "github.com/beiduoke/go-scaffold/internal/server",
    visibility = ["//app/admin/service:__subpackages__"],
    deps = [
        "//internal/conf",
        "//internal/pkg/middleware/authn",
        "//internal/pkg/middleware/authz",
        "//internal/pkg/middleware/localize",
        "//internal/pkg/middleware/multipoint",
        "//internal/pkg/middleware/signout",
        "//internal/service/api",
        "//pkg/auth/authn",
        "//pkg/auth/authz",
        "@com_github_go_kratos_grpc_gateway_v2//protoc-gen-openapiv2/generator",
        "@com_github_go_kratos_kratos_v2//log",
        "@com_github_go_kratos_kratos_v2//middleware",
        "@com_github_go_kratos_kratos_v2//middleware/logging",
        "@com_github_go_kratos_kratos_v2//middleware/recovery",
        "@com_github_go_kratos_kratos_v2//middleware/selector",
        "@com_github_go_kratos_kratos_v2//middleware/tracing",
        "@com_github_go_kratos_kratos_v2//middleware/validate",
        "@com_github_go_kratos_kratos_v2//transport/grpc",
        "@com_github_go_kratos_kratos_v2//transport/http",
        "@com_github_go_kratos_swagger_api//openapiv2",
        "@com_github_google_wire//:wire",
        "@com_github_gorilla_handlers//:handlers",
    ],
)
