load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "enum",
    srcs = [
        "enum.pb.go",
        "enum.pb.validate.go",
    ],
    importpath = "github.com/beiduoke/go-scaffold/api/common/enum",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
