load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pagination",
    srcs = [
        "pagination.pb.go",
        "pagination.pb.validate.go",
    ],
    importpath = "github.com/beiduoke/go-scaffold/api/common/pagination",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
