load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "authz",
    srcs = [
        "authz.go",
        "claims.go",
        "errors.go",
        "options.go",
    ],
    importpath = "github.com/beiduoke/go-scaffold/pkg/auth/authz",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
