load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "enum_proto",
    srcs = ["enum.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "enum_go_proto",
    importpath = "github.com/beiduoke/go-scaffold/api/common/enum",
    proto = ":enum_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "enum",
    embed = [":enum_go_proto"],
    importpath = "github.com/beiduoke/go-scaffold/api/common/enum",
    visibility = ["//visibility:public"],
)
