load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pagination_proto",
    srcs = ["pagination.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "pagination_go_proto",
    importpath = "github.com/beiduoke/go-scaffold/api/common/pagination",
    proto = ":pagination_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "pagination",
    embed = [":pagination_go_proto"],
    importpath = "github.com/beiduoke/go-scaffold/api/common/pagination",
    visibility = ["//visibility:public"],
)
