load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1_proto",
    srcs = [
        "api.proto",
        "error_reason.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//errors:errors_proto",
        "//gnostic/openapi/v3:v3_proto",
        "//google/api:api_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/beiduoke/go-scaffold/api/server/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//errors:errors_proto",
        "//gnostic/openapi/v3:annotations_proto",
        "//google/api:annotations_proto",
        "//validate:validate_proto",
    ],
)

go_library(
    name = "server",
    embed = [":v1_go_proto"],
    importpath = "github.com/beiduoke/go-scaffold/api/server/v1",
    visibility = ["//visibility:public"],
)
