load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "openapi",
    srcs = [
        "openapiv2.pb.go",
        "openapiv2.pb.validate.go",
    ],
    importpath = "github.com/beiduoke/go-scaffold/api/gnostic/openapi/v2",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
