load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "openapi",
    srcs = [
        "annotations.pb.go",
        "annotations.pb.validate.go",
        "openapiv3.pb.go",
        "openapiv3.pb.validate.go",
    ],
    importpath = "github.com/beiduoke/go-scaffold/api/gnostic/openapi/v3",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
