load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "compiler",
    srcs = [
        "plugin.pb.go",
        "plugin.pb.validate.go",
    ],
    importpath = "github.com/beiduoke/go-scaffold/api/google/protobuf/compiler",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
